--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
     <script src="script.js"></script>
+    <script src="https://kit.fontawesome.com/571fa3c17f.js" crossorigin="anonymous"></script>
     <title>Palco Conectado</title>
 </head>
 
@@ -40,23 +41,112 @@
                 <div class="container-fluid py-5">
                 <h1 class="display-5 fw-bold ">Bem vindo ao Palco Conectado!</h1>
                 <p class="fs-4">Conectando bares, casas de shows com bandas e músicos do Brasil.</p>
-                <button class="btn btn-primary btn-lg butao" type="button">Cadastre seu bar</button>
-                <button class="btn btn-primary btn-lg butao" type="button">Cadastre sua banda</button>
+                <button class="btn btn-primary btn-lg butao" type="button">Se cadastre!</button>
                 </div>
             </div>                   
         </div> <!-- Jumbotron -->
     </header>
 
+    
+    <div class="container-fluid text-center services">
+        <p id="conheca">Conheça nossos serviços</p>
+        <div class="row align-items-start">
+            <div class="col col-bar">
+                <a type="button" data-bs-toggle="modal" data-bs-target="#modalBar" style="display: inline-block;">    
+                    <p>Tem um bar ou uma casa de show?</p>
+                    <img src="img/bar.jpg">
+                </a>
+            </div> 
+            <div class="col col-band">
+                <a type="button" data-bs-toggle="modal" data-bs-target="#modalBand" style="display: inline-block;">    
+                    <p>Tem uma banda ou está a procura de uma?</p>
+                    <img src="img/musicos.jpg">
+                </a>
+            </div>
+        </div>
+    </div>
+    
+    <div class="modal fade my-modal" tabindex="-1" role="dialog" id="modalBar">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-body p-5">
+                    <h2 class="fw-bold mb-0">Tem um bar ou uma casa de show?</h2>
+                    <ul class="d-grid gap-4 my-5 list-unstyled small">
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <div>
+                                <h5 class="mb-0">Procure atrações</h5>
+                                Procure bandas e músicos tops pra tocar no seu bar!
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-calendar-days"></i>
+                            <div>
+                                <h5 class="mb-0">Marque shows</h5>
+                                Use nosso sistema para marcar shows e ter seu calendário de eventos!
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-comments"></i>
+                            <div>
+                                <h5 class="mb-0">Converse</h5>
+                                Converse com as bandas para agilizar todo o processo!
+                            </div>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Que tops!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade my-modal" tabindex="-1" role="dialog" id="modalBand">
+        <div class="modal-dialog modal-dialog-centered" role="document">
+            <div class="modal-content rounded-4 shadow">
+                <div class="modal-body p-5">
+                    <h2 class="fw-bold mb-0">Tem uma banda ou está a procura de uma?</h2>
+                    <ul class="d-grid gap-4 my-5 list-unstyled small">
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-magnifying-glass"></i>
+                            <div>
+                                <h5 class="mb-0">Procure bandas!</h5>
+                                Procure bandas para você tocar e fazer uma grana extra!
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-guitar"></i>
+                            <div>
+                                <h5 class="mb-0">Procure músicos</h5>
+                                Procure músicos para entrar na sua banda!
+                            </div>
+                        </li>
+                        <li class="d-flex gap-4">
+                            <i class="fa-solid fa-money-bill-1-wave"></i>
+                            <div>
+                                <h5 class="mb-0">Marque shows</h5>
+                                Marque shows em bares e em casas de shows!
+                            </div>
+                        </li>
+                    </ul>
+                    <button type="button" class="btn btn-lg btn-primary mt-5 w-100" data-bs-dismiss="modal">Que tops!</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
+
+
     <!-- Carousel 1 bars -->
     <div class="container-fluid my d-none d-md-block">
         <div class="container">
-            <h1 class="text-center text-white">Bares</h1>
+            <h1 class="text-center text-white">Bares e casas de shows</h1>
             <div id="carouselExample" class="carousel slide">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 1</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -64,7 +154,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 2</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -72,7 +162,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 3</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -84,7 +174,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 1</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -92,7 +182,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 2</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -100,7 +190,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 3</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -112,7 +202,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 1</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -120,7 +210,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 2</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -128,7 +218,7 @@
                                 </div>
                             </div>
                             <div class="card my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Bar 3</h5>
                                     <p class="card-text">Bar de rockão</p>
@@ -159,7 +249,7 @@
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 1</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -167,7 +257,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 2</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -175,7 +265,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 3</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -187,7 +277,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 4</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -195,7 +285,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 5</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -203,7 +293,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 6</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -215,7 +305,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 7</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -223,7 +313,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 8</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -231,7 +321,7 @@
                                 </div>
                             </div>
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/bar.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 9</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -258,7 +348,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bar 1</h5>
                             <p class="card-text">Bar de rockão</p>
@@ -268,7 +358,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bar 2</h5>
                             <p class="card-text">Bar de rockão</p>
@@ -278,7 +368,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Bar 3</h5>
                             <p class="card-text">Bar de rockão</p>
@@ -303,7 +393,7 @@
             <div class="carousel-inner">
                 <div class="carousel-item active">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Banda 1</h5>
                             <p class="card-text">Banda de rockão</p>
@@ -313,7 +403,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Banda 2</h5>
                             <p class="card-text">Banda de rockão</p>
@@ -323,7 +413,7 @@
                 </div>
                 <div class="carousel-item">
                     <div class="card">
-                        <img src="bar.jpg" class="card-img-top" alt="...">
+                        <img src="img/bar.jpg" class="card-img-top" alt="...">
                         <div class="card-body">
                             <h5 class="card-title">Banda 3</h5>
                             <p class="card-text">Banda de rockão</p>
