--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <link rel="stylesheet" href="style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-    <script src="script.js"></script>
     <script src="https://kit.fontawesome.com/571fa3c17f.js" crossorigin="anonymous"></script>
     <title>Palco Conectado</title>
 </head>
@@ -250,24 +249,24 @@
                 <div class="carousel-inner">
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 1</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 2</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 3</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -278,24 +277,24 @@
                     </div>
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 4</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 5</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 6</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -306,24 +305,24 @@
                     </div>
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 7</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 8</h5>
                                     <p class="card-text">Banda de rockão</p>
                                     <a href="#" class="btn btn-primary">Conheça!</a>
                                 </div>
                             </div>
-                            <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                            <div class="card  my-card" style="width: 18rem;">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 9</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -409,7 +408,7 @@
                     <div class="carousel-item active">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 1</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -421,7 +420,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 2</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -433,7 +432,7 @@
                     <div class="carousel-item">
                         <div class="d-flex justify-content-center">
                             <div class="card col-12 my-card" style="width: 18rem;">
-                                <img src="img/bar.jpg" class="card-img-top" alt="...">
+                                <img src="img/musicos.jpg" class="card-img-top" alt="...">
                                 <div class="card-body">
                                     <h5 class="card-title">Banda 3</h5>
                                     <p class="card-text">Banda de rockão</p>
@@ -472,6 +471,7 @@
         </footer>
     </div>
 
+    <script src="script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
 </body>    
 </html>
